--- a/index.html
+++ b/index.html
@@ -77,20 +77,28 @@
                     </div>
                 </div>
                 
-                <!-- 天氣區塊：點擊可跳轉至 JMA 氣象廳預報 -->
+                <!-- 天氣區塊：動態抓取 -->
                 <div @click="openExternal('https://www.data.jma.go.jp/multi/yoho/yoho_detail.html?code=400010&lang=cn_zt')"
                      class="bg-black/30 p-4 rounded-[35px] backdrop-blur-md text-center border border-white/20 min-w-[110px] float-anim cursor-pointer hover:bg-black/40 active:scale-95 transition-all">
-                    <i data-lucide="cloud-sun" class="w-12 h-12 mx-auto mb-1 text-[#FF91C1]"></i>
-                    <p class="text-3xl font-black">24°C</p>
-                    <p class="text-[10px] opacity-70 font-bold uppercase tracking-tighter">JMA 氣象預報</p>
+                    <!-- 使用動態圖示 -->
+                    <div class="flex justify-center mb-1">
+                        <i v-if="weather.icon === 'sun'" data-lucide="sun" class="w-10 h-10 text-yellow-400"></i>
+                        <i v-else-if="weather.icon === 'cloud-sun'" data-lucide="cloud-sun" class="w-10 h-10 text-[#FF91C1]"></i>
+                        <i v-else-if="weather.icon === 'cloud'" data-lucide="cloud" class="w-10 h-10 text-slate-300"></i>
+                        <i v-else-if="weather.icon === 'cloud-rain'" data-lucide="cloud-rain" class="w-10 h-10 text-blue-400"></i>
+                        <i v-else-if="weather.icon === 'snowflake'" data-lucide="snowflake" class="w-10 h-10 text-cyan-200"></i>
+                        <i v-else data-lucide="thermometer" class="w-10 h-10 text-[#FF91C1]"></i>
+                    </div>
+                    <p class="text-3xl font-black">{{ weather.temp }}°C</p>
+                    <p class="text-[10px] opacity-70 font-bold uppercase tracking-tighter">{{ weather.desc }}</p>
                 </div>
             </div>
         </header>
 
         <!-- 導覽頁籤 -->
         <nav class="flex bg-white/90 backdrop-blur-lg sticky top-0 z-50 px-4 mt-4 border-b-2 border-purple-100 shadow-sm">
-            <button @click="activeTab = 'itinerary'" :class="['flex-1 py-5 font-bold text-sm transition-all', activeTab === 'itinerary' ? 'tab-active' : 'text-slate-300']">冒險行程</button>
-            <button @click="activeTab = 'expense'" :class="['flex-1 py-5 font-bold text-sm transition-all', activeTab === 'expense' ? 'tab-active' : 'text-slate-300']">錢包管家</button>
+            <button @click="activeTab = 'itinerary'" :class="['flex-1 py-5 font-bold text-sm transition-all', activeTab === 'itinerary' ? 'tab-active' : 'text-slate-400']">冒險行程</button>
+            <button @click="activeTab = 'expense'" :class="['flex-1 py-5 font-bold text-sm transition-all', activeTab === 'expense' ? 'tab-active' : 'text-slate-400']">錢包管家</button>
             <button @click="activeTab = 'tools'" :class="['flex-1 py-5 font-bold text-sm transition-all', activeTab === 'tools' ? 'tab-active' : 'text-slate-300']">百寶箱</button>
         </nav>
 
@@ -203,7 +211,7 @@
                 </div>
             </section>
 
-            <!-- 行李清單 -->
+            <!-- 行理清單 -->
             <section>
                 <h3 class="font-black text-2xl text-slate-800 mb-6 px-4 flex items-center gap-3">
                     <i data-lucide="luggage" class="text-[#FF91C1] w-8 h-8"></i> 行李清單
@@ -221,7 +229,7 @@
                     </div>
                 </div>
 
-                <!-- 托運與手提注意事項 -->
+                <!-- 注意事項 -->
                 <div class="kuromi-card p-6 bg-slate-900 text-white border-none shadow-xl">
                     <h4 class="font-bold text-[#FF91C1] mb-4 flex items-center gap-2">
                         <i data-lucide="alert-circle" class="w-4 h-4"></i> 托運與手提注意事項
@@ -249,6 +257,9 @@
                 const members = ['KCY', 'Ruby', 'YSL', 'Tsai'];
                 const expenses = ref([]);
                 const newExpense = ref({ date: '2026-05-30', item: '', amount: null, payer: 'KCY' });
+
+                // 天氣響應式狀態
+                const weather = ref({ temp: '--', icon: 'thermometer', desc: 'JMA 氣象廳' });
 
                 const itinerary = ref([
                     { date: '5/30', dayName: 'SAT', plans: [{time: '14:40', title: 'CI128 夢幻起飛 ✈️'}, {time: '18:05', title: '抵達福岡機場 🇯🇵'}, {time: '20:00', title: '西鐵 CROOM 入住 🏨'}]},
@@ -289,6 +300,29 @@
                     ]}
                 ]);
 
+                // 抓取真實天氣資料
+                const fetchWeather = async () => {
+                    try {
+                        const response = await fetch('https://api.open-meteo.com/v1/forecast?latitude=33.59&longitude=130.40&current_weather=true');
+                        const data = await response.json();
+                        if (data && data.current_weather) {
+                            weather.value.temp = Math.round(data.current_weather.temperature);
+                            const code = data.current_weather.weathercode;
+                            
+                            // 根據 WMO Code 對應圖示
+                            if (code === 0) { weather.value.icon = 'sun'; weather.value.desc = '晴朗'; }
+                            else if ([1, 2, 3].includes(code)) { weather.value.icon = 'cloud-sun'; weather.value.desc = '多雲'; }
+                            else if ([45, 48].includes(code)) { weather.value.icon = 'cloud'; weather.value.desc = '有霧'; }
+                            else if ([51, 53, 55, 61, 63, 65, 80, 81, 82].includes(code)) { weather.value.icon = 'cloud-rain'; weather.value.desc = '有雨'; }
+                            else if ([71, 73, 75, 77, 85, 86].includes(code)) { weather.value.icon = 'snowflake'; weather.value.desc = '下雪'; }
+                            else { weather.value.icon = 'thermometer'; weather.value.desc = 'JMA 氣象廳'; }
+                        }
+                    } catch (e) {
+                        console.error('天氣讀取失敗', e);
+                        weather.value.desc = '讀取失敗';
+                    }
+                };
+
                 const addExpense = () => {
                     if (newExpense.value.item && newExpense.value.amount) {
                         expenses.value.unshift({ ...newExpense.value });
@@ -301,8 +335,12 @@
                     window.open(url, '_blank');
                 };
 
-                onMounted(() => lucide.createIcons());
-                return { activeTab, selectedDay, fxInput, members, expenses, newExpense, itinerary, packing, addExpense, openExternal };
+                onMounted(() => {
+                    fetchWeather();
+                    lucide.createIcons();
+                });
+
+                return { activeTab, selectedDay, fxInput, members, expenses, newExpense, itinerary, packing, weather, addExpense, openExternal };
             }
         }).mount('#app');
     </script>
