--- a/index.html
+++ b/index.html
@@ -70,17 +70,17 @@
 
             <div class="flex justify-between items-center relative z-10">
                 <div>
-                    <h1 class="text-4xl font-bold tracking-tighter" style="font-family: 'ZCOOL KuaiLe', cursive;">福岡 2026</h1>
+                    <!-- 字體加大至 text-5xl -->
+                    <h1 class="text-5xl font-bold tracking-tighter" style="font-family: 'ZCOOL KuaiLe', cursive;">福岡 2026</h1>
                     <div class="flex items-center gap-2 mt-2">
                         <span class="bg-black/30 px-2 py-1 rounded-lg text-[10px] font-bold uppercase tracking-widest">KCY FAMILY</span>
                         <i data-lucide="heart" class="w-3 h-3 fill-pink-400 text-pink-400"></i>
                     </div>
                 </div>
                 
-                <!-- 天氣區塊：動態抓取 -->
+                <!-- 天氣區塊 -->
                 <div @click="openExternal('https://www.data.jma.go.jp/multi/yoho/yoho_detail.html?code=400010&lang=cn_zt')"
                      class="bg-black/30 p-4 rounded-[35px] backdrop-blur-md text-center border border-white/20 min-w-[110px] float-anim cursor-pointer hover:bg-black/40 active:scale-95 transition-all">
-                    <!-- 使用動態圖示 -->
                     <div class="flex justify-center mb-1">
                         <i v-if="weather.icon === 'sun'" data-lucide="sun" class="w-10 h-10 text-yellow-400"></i>
                         <i v-else-if="weather.icon === 'cloud-sun'" data-lucide="cloud-sun" class="w-10 h-10 text-[#FF91C1]"></i>
@@ -248,7 +248,7 @@
     </div>
 
     <script>
-        const { createApp, ref, onMounted } = Vue;
+        const { createApp, ref, onMounted, nextTick } = Vue;
         createApp({
             setup() {
                 const activeTab = ref('itinerary');
@@ -316,6 +316,10 @@
                             else if ([51, 53, 55, 61, 63, 65, 80, 81, 82].includes(code)) { weather.value.icon = 'cloud-rain'; weather.value.desc = '有雨'; }
                             else if ([71, 73, 75, 77, 85, 86].includes(code)) { weather.value.icon = 'snowflake'; weather.value.desc = '下雪'; }
                             else { weather.value.icon = 'thermometer'; weather.value.desc = 'JMA 氣象廳'; }
+                            
+                            // 重要：等待 DOM 更新後重新刷新 Lucide 圖示
+                            await nextTick();
+                            lucide.createIcons();
                         }
                     } catch (e) {
                         console.error('天氣讀取失敗', e);
