--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 </div>
                 <div class="flex items-center justify-between">
                     <div class="flex-1">
-                        <label class="text-[10px] opacity-40 uppercase font-bold">輸入日幣 ¥</label>
+                        <label class="text-[10px] opacity-40 uppercase font-bold">快速換算日幣 ¥</label>
                         <input v-model.number="fxInput" type="number" placeholder="0" class="w-full bg-transparent text-5xl font-bold focus:outline-none placeholder:text-white/5">
                     </div>
                     <div class="text-right ml-4">
@@ -219,7 +219,7 @@
                     <input v-model="newExpense.item" placeholder="品項名稱" class="w-full border-b-2 border-purple-50 pb-3 text-sm focus:outline-none focus:border-[#9D76C1]">
                 </div>
 
-                <!-- 雙向自動換算金額欄位 -->
+                <!-- 雙向自動換算金額欄位 (新增台幣欄位) -->
                 <div class="grid grid-cols-2 gap-4">
                     <div class="flex flex-col gap-1">
                         <label class="text-[10px] text-slate-400 font-bold ml-1">金額 (日幣 ¥)</label>
@@ -234,6 +234,7 @@
                 <button @click="addExpense" class="w-full kuromi-gradient text-white py-5 rounded-[30px] font-bold text-lg shadow-xl active:scale-95 transition">紀錄這筆開銷</button>
             </div>
             
+            <!-- 支出明細 -->
             <div class="space-y-4 pb-10">
                 <div v-for="(ex, idx) in expenses" :key="idx" class="kuromi-card p-6 flex justify-between items-center shadow-md border-l-[12px] border-[#9D76C1]">
                     <div>
@@ -315,6 +316,7 @@
                 const exchangeRate = ref(0.21); // 預設匯率
                 const fxDate = ref('Loading...');
                 
+                // 初始化支出對象，包含台幣欄位
                 const newExpense = ref({ 
                     date: '2026-05-30', 
                     item: '', 
@@ -380,6 +382,7 @@
                     }
                 };
 
+                // 核心功能：雙向自動換算
                 const convertCurrency = (source) => {
                     const rate = parseFloat(exchangeRate.value);
                     if (source === 'jpy') {
@@ -484,7 +487,10 @@
                 const addExpense = () => {
                     if (newExpense.value.item && newExpense.value.amount) {
                         expenses.value.unshift({ ...newExpense.value });
-                        newExpense.value.item = ''; newExpense.value.amount = null; newExpense.value.amountTwd = null;
+                        // 重置表單
+                        newExpense.value.item = ''; 
+                        newExpense.value.amount = null;
+                        newExpense.value.amountTwd = null;
                     }
                 };
 
