--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                     { category: '一、必備證件與財務', items: [{text: '護照 (效期6月以上)', done: false}, {text: '機票/訂位紀錄', done: false}, {text: '信用卡/日幣現金', done: false}] },
                     { category: '二、衣物配件', items: [{text: '睡衣/內衣褲/襪子', done: false}, {text: '舒適好走的鞋/拖鞋', done: false}] },
                     { category: '三、盥洗保養', items: [{text: '牙刷牙膏/洗面乳', done: false}, {text: '分裝保養品/生理用品', done: false}] },
-                    { category: '四、3C用品', items: [{text: '手機/充電器/充電線', done: false}, {text: '行動電源 (必手提)', done: false}] }
+                    { category: '四、3C用品', items: [{text: '手機/充電線/充電器', done: false}, {text: '行動電源 (必手提)', done: false}] }
                 ]);
 
                 const fetchExchangeRate = async () => {
@@ -494,7 +494,7 @@
                     finally { isSaving.value = false; await nextTick(); lucide.createIcons(); }
                 };
 
-                // --- 核心更新：根據您的橫向佈局 (B=5/30, C=5/31, D=6/1...) 重新編寫解析邏輯 ---
+                // --- 核心更新：根據橫向佈局重新編寫解析邏輯 ---
                 const fetchItineraryFromSheet = async () => {
                     syncStatus.value = 'loading';
                     const url = `https://docs.google.com/spreadsheets/d/${SHEET_ID}/export?format=csv&gid=${ITINERARY_GID}&t=${Date.now()}`;
@@ -503,7 +503,6 @@
                         const csvText = await response.text();
                         const rows = parseCSV(csvText);
                         
-                        // 定義本地行程結構 (8天)
                         const newItinerary = [
                             { date: '5/30', dayName: 'SAT', plans: [] }, { date: '5/31', dayName: 'SUN', plans: [] },
                             { date: '6/1', dayName: 'MON', plans: [] }, { date: '6/2', dayName: 'TUE', plans: [] },
@@ -513,32 +512,30 @@
 
                         if (rows.length < 1) return;
                         
-                        const headers = rows[0]; // 第一列 (時間, 5/30, 5/31, 6/1, 6/2, 6/3, 6/4, 6/5, 6/6)
+                        const headers = rows[0]; 
                         let count = 0;
 
-                        // 遍歷所有列 (Row)
                         for (let i = 1; i < rows.length; i++) {
                             const row = rows[i];
-                            const timeStr = row[0]; // A 欄：時間
+                            const timeStr = row[0]; 
                             if (!timeStr) continue;
 
-                            // 遍歷 B 到 I 欄 (Column 1 到 8)
                             for (let j = 1; j < row.length; j++) {
                                 const planContent = row[j];
                                 if (!planContent || planContent.trim() === "") continue;
 
-                                const headerText = headers[j]; // 該欄位對應的日期標題
+                                const headerText = headers[j]; 
                                 if (!headerText) continue;
 
-                                // 智慧比對標題中的月份與日期
-                                const dateMatch = headerText.match(/(\d{1,2})[\/\-月\.](\d{1,2})/);
-                                if (dateMatch) {
-                                    const m = parseInt(dateMatch[1]);
-                                    const d = parseInt(dateMatch[2]);
+                                // 智慧解析日期：從後往前抓取數字，避免年份 2026 被誤認為日期
+                                const dateParts = headerText.split(/[\/\-月\.年\s]+/).filter(p => /\d+/.test(p));
+                                if (dateParts.length >= 2) {
+                                    const d = parseInt(dateParts.pop()); // 最後一個是日
+                                    const m = parseInt(dateParts.pop()); // 倒數第二個是月
 
                                     const dayIndex = newItinerary.findIndex(day => {
-                                        const parts = day.date.split('/');
-                                        return parseInt(parts[0]) === m && parseInt(parts[1]) === d;
+                                        const p = day.date.split('/');
+                                        return parseInt(p[0]) === m && parseInt(p[1]) === d;
                                     });
 
                                     if (dayIndex !== -1) {
@@ -552,10 +549,8 @@
                             }
                         }
 
-                        // 針對每一天的計畫依時間排序
                         newItinerary.forEach(day => {
                             day.plans.sort((a, b) => {
-                                // 簡單的正則提取數字進行排序 (09:00 vs 10:00)
                                 const timeA = a.time.replace(/\D/g, '').padEnd(4, '0');
                                 const timeB = b.time.replace(/\D/g, '').padEnd(4, '0');
                                 return timeA.localeCompare(timeB);
@@ -566,10 +561,7 @@
                         syncCount.value = count;
                         syncStatus.value = 'success';
                         setTimeout(() => syncStatus.value = 'idle', 3000);
-                    } catch (e) { 
-                        console.error("行程同步失敗", e);
-                        syncStatus.value = 'error'; 
-                    }
+                    } catch (e) { syncStatus.value = 'error'; }
                     await nextTick();
                     lucide.createIcons();
                 };
