--- a/index.html
+++ b/index.html
@@ -156,22 +156,25 @@
 
                 <!-- (B) 行程詳情頁 -->
                 <div v-else-if="itineraryView === 'detail'" class="px-6 py-8 min-h-screen">
-                    <div class="flex items-center justify-between mb-8">
-                        <div class="flex items-center gap-5">
-                            <button @click="itineraryView = 'list'" class="p-5 bg-white rounded-full shadow-lg text-purple-600 active:scale-75 transition-all border border-purple-50">
-                                <i data-lucide="chevron-left" class="w-8 h-8"></i>
-                            </button>
-                            <div>
-                                <h2 class="text-4xl font-black text-slate-800 tracking-tighter">{{ itinerary[selectedDay].date }}</h2>
-                                <p class="text-xs font-black text-purple-400 uppercase mt-1">{{ itinerary[selectedDay].dayName }} 計畫清單</p>
-                            </div>
+                    <div class="flex items-center gap-5 mb-8">
+                        <button @click="itineraryView = 'list'" class="p-5 bg-white rounded-full shadow-lg text-purple-600 active:scale-75 transition-all border border-purple-50">
+                            <i data-lucide="chevron-left" class="w-8 h-8"></i>
+                        </button>
+                        <div>
+                            <h2 class="text-4xl font-black text-slate-800 tracking-tighter">{{ itinerary[selectedDay].date }}</h2>
+                            <p class="text-xs font-black text-purple-400 uppercase tracking-[0.3em] mt-1">{{ itinerary[selectedDay].dayName }} 計畫清單</p>
                         </div>
-                        <button @click="startAddPlan" class="bg-purple-600 text-white p-4 rounded-full shadow-xl active:scale-90 transition flex items-center gap-2">
-                            <i data-lucide="plus" class="w-6 h-6"></i>
-                            <span class="text-xs font-bold pr-1">新增計畫</span>
+                    </div>
+
+                    <!-- 🚀 精心設計的「新增行程」大按鈕 -->
+                    <div class="mb-8">
+                        <button @click="startAddPlan" class="w-full bg-purple-50 border-4 border-dashed border-purple-200 text-purple-500 py-6 rounded-[35px] flex items-center justify-center gap-3 active:scale-95 transition shadow-inner">
+                            <i data-lucide="calendar-plus" class="w-6 h-6"></i>
+                            <span class="font-black text-lg">新增本日行程 💜</span>
                         </button>
                     </div>
 
+                    <!-- 行程列表 -->
                     <div v-if="itinerary[selectedDay].plans.length > 0" class="space-y-6">
                         <div v-for="(plan, pIdx) in itinerary[selectedDay].plans" :key="pIdx" 
                              class="kuromi-card p-6 flex flex-col shadow-xl border-l-[15px] border-[#9D76C1] cursor-default">
@@ -202,11 +205,11 @@
                                 <i data-lucide="edit-3" class="text-purple-500"></i> {{ editingPlanIndex === -1 ? '新增計畫' : '編輯計畫' }} ✏️
                             </h3>
                             <div>
-                                <label class="text-[10px] font-black text-slate-400 uppercase ml-1">時間 (A欄)</label>
+                                <label class="text-[10px] font-black text-slate-400 uppercase ml-1">抵達時間 (例如 10:00)</label>
                                 <input v-model="editPlanBuffer.time" placeholder="請輸入時間" class="w-full border-b-4 border-purple-50 p-3 text-lg font-bold focus:border-purple-400 outline-none">
                             </div>
                             <div>
-                                <label class="text-[10px] font-black text-slate-400 uppercase ml-1">計畫內容 ({{ itinerary[selectedDay].date }})</label>
+                                <label class="text-[10px] font-black text-slate-400 uppercase ml-1">行程說明 ({{ itinerary[selectedDay].date }})</label>
                                 <input v-model="editPlanBuffer.title" placeholder="請輸入內容" class="w-full border-b-4 border-purple-50 p-3 text-lg font-bold focus:border-purple-400 outline-none">
                             </div>
                             <div class="flex gap-3 pt-4">
@@ -260,7 +263,7 @@
                     <input v-model.number="newExpense.amount" @input="convertCurrency('jpy')" type="number" placeholder="日幣 ¥" class="w-full border-b-2 border-purple-50 p-3 text-sm focus:border-purple-400 outline-none border-b-2">
                     <input v-model.number="newExpense.amountTwd" @input="convertCurrency('twd')" type="number" placeholder="台幣 $" class="w-full border-b-2 border-purple-50 p-3 text-sm focus:border-purple-400 outline-none border-b-2">
                 </div>
-                <input v-model="newExpense.remark" placeholder="備註 (刷卡、好吃、分帳...)" class="w-full border-b-2 border-purple-50 pb-3 text-sm focus:border-purple-400 outline-none">
+                <input v-model="newExpense.remark" placeholder="備註 (例如：刷卡、好吃、分帳...)" class="w-full border-b-2 border-purple-50 pb-3 text-sm focus:border-purple-400 outline-none">
 
                 <div class="flex gap-2">
                     <button @click="addExpense" :disabled="isSaving" class="flex-1 kuromi-gradient text-white py-5 rounded-[30px] font-bold text-lg shadow-lg active:scale-95 transition-all flex items-center justify-center gap-2">
@@ -503,7 +506,7 @@
                     
                     const dataToSave = { 
                         ...newExpense.value, 
-                        type: 'expense' // ⚠️ 關鍵：明確標記為記帳類型
+                        type: 'expense' 
                     };
 
                     try {
